@@ -4575,6 +4575,64 @@ sub startup_script_freebsd {
     $self->audit( "startup_script: added $sym as symlink to $start");
 };
 
+sub tcp_smtp {
+    my $self  = shift;
+    my %p = validate( @_, { 'etc_dir' => SCALAR } );
+
+    my $etc_dir = $p{'etc_dir'};
+
+    # test for an existing one
+    if ( -f "$etc_dir/tcp.smtp" ) {
+        my $count = $self->util->file_read( "$etc_dir/tcp.smtp" );
+        return if $count != 1;
+        $self->util->archive_file( "$etc_dir/tcp.smtp" ); # back it up
+    }
+
+    my $qdir = $self->conf->{'qmail_dir'};
+
+    my @lines = <<"EO_TCP_SMTP";
+# RELAYCLIENT="" means IP can relay
+# RBLSMTPD=""    means DNSBLs are ignored for this IP
+# QMAILQUEUE=""  is the qmail queue process, defaults to $qdir/bin/qmail-queue
+#
+#    common QMAILQUEUE settings:
+# QMAILQUEUE="$qdir/bin/qmail-queue"
+# QMAILQUEUE="$qdir/bin/simscan"
+#
+#      handy test settings
+# 127.:allow,RELAYCLIENT="",RBLSMTPD="",QMAILQUEUE="$qdir/bin/simscan"
+# 127.:allow,RELAYCLIENT="",RBLSMTPD="",QMAILQUEUE="$qdir/bin/qscanq/bin/qscanq"
+127.0.0.1:allow,RELAYCLIENT="",RBLSMTPD=""
+
+#
+# Allow anyone with reverse DNS set up
+#=:allow
+#    soft block on no reverse DNS
+#:allow,RBLSMTPD="Blocked - Reverse DNS queries for your IP fail. Fix your DNS!"
+#    hard block on no reverse DNS
+#:allow,RBLSMTPD="-Blocked - Reverse DNS queries for your IP fail. You cannot send me mail."
+#    default allow
+#:allow,QMAILQUEUE="$qdir/bin/simscan"
+:allow
+EO_TCP_SMTP
+;
+    $self->util->file_write( "$etc_dir/tcp.smtp", lines => \@lines );
+}
+
+sub tcp_smtp_cdb {
+    my $self = shift;
+    my %p = validate( @_, { 'etc_dir' => SCALAR } );
+    my $dir = $p{etc_dir};
+
+    my $tcprules = $self->util->find_bin('tcprules');
+    $self->util->syscmd( "$tcprules $dir/tcp.smtp.cdb $dir/etc/tcp.smtp.tmp < $dir/etc/tcp.smtp" )
+        or return;
+    chmod 0644, "$dir/etc/tcp.smtp";
+    chmod 0644, "$dir/etc/tcp.smtp.cdb";
+    print "Reloaded $dir/tcp.smtp";
+    return 1;
+};
+
 sub test {
     require Mail::Toaster::Setup::Test;
     return Mail::Toaster::Setup::Test->new;
