@@ -220,7 +220,6 @@ vpopmail_etc_passwd                = 0
 vpopmail_domain_quotas             = 0
 vpopmail_default_quota             = 100000000S,10000C  # deprecated in 5.4.0+
 vpopmail_disable_many_domains      = 0
-vpopmail_enable_netblocks          = 0
 vpopmail_maildrop                  = 0
 vpopmail_daemon                    = 0
 
