@@ -1,6 +1,8 @@
 
 =head1 Mail Toaster Changes
 
+    install tcp.smtp during tests, if missing
+    conf: removed vpopmail_enable_netblocks option (barely used, if at all)
     abstracted some code into new control_sql method
     added get_control_dir, get_supervise_dir (reduce duplicated code)
     deleted Qmail::check_control (moved logic into qqtool.pl)
